# daily-report-agent

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat
config/: sources.example.yaml
records/: 2026-03-record.example.md
src/: cli.py  logging_config.py  orchestrator.py
src/analyzers/: __init__.py  industry_analyzer.py  paper_analyzer.py  social_analyzer.py
src/collectors/: __init__.py  arxiv_collector.py  base.py  bilibili_collector.py  github_trending_collector.py  hacker_news_collector.py  product_hunt_collector.py  reddit_collector.py  rss_collector.py  semantic_scholar_collector.py  tavily_collector.py  youtube_collector.py
src/enrichers/: __init__.py  paper_enricher.py  web_enricher.py
src/filters/: __init__.py  item_filter.py  ranked_item_filter.py  recent_duplicates.py
src/llm/: client.py
src/models/: __init__.py  analysis.py  config.py  registry.py  report.py  source.py
src/registry/: __init__.py  manager.py
src/reporters/: __init__.py  deep_dive_reporter.py  overview_reporter.py
src/storage/: __init__.py  local_store.py  registry_store.py
src/utils/: json_repair.py  markdown_math.py  overview_snippets.py
tests/: conftest.py  test_cli.py  test_llm_client.py  test_orchestrator.py  test_storage.py
tests/test_analyzers/: test_industry_analyzer.py  test_paper_analyzer.py  test_social_analyzer.py
tests/test_collectors/: test_arxiv_collector.py  test_bilibili_collector.py  test_github_trending_collector.py  test_hacker_news_collector.py  test_product_hunt_collector.py  test_reddit_collector.py  test_rss_collector.py  (+3 more)
(+25 files in other folders)
